- Fixed: Fibaro Wall Plug (fgwpe) config
- Implemented: Option for Dummy device to create Air Quality Sensor
- Fixed: Daylight Saving values for 29-march-2014
- Fixed: custom_light_icons json request (now reporting status OK)
- Implemented: Latest RFXCOM SDK (#74)
- Implemented: Energenie5/COCO GDR2-2000R
- Implemented: BlindsT7 (Forest)
- Changed: HTML code for manual light

Version 1.0.1396 (January 18th 2014)
- Implemented: new commandline option to specify www root folder (-wwwroot)
- Implemented: Limitless/AppLamp, option to set Hue/Brightness in the Edit option
- Implemented: Limitless/AppLamp, can now also be used as 'Dimmer'
- Implemented: Limitless/AppLamp, can now be set to a defined color in scenes/groups/timers
- Fixed: Device/Scene/Group names can now included special characters like %
- Fixed: Edit Users, right combobox did not correctly update when selecting a user
- Fixed: User Devices for Users that did not have 'Shared' rights
- Fixed: Hardware Settings, Domoticz remote server port display
- Changed: Contact notifications now says 'Open/Closed' instead of 'On/Off'
- Fixed: Commandline option for linux now ignores slash character /
- Implemented: various improvements to have Domoticz compile in VS2010 straight from the repository
- Implemented: Windows installer option to install as service (for server implementations, no icons will be installed)
- Implemented: www port can be specified in windows installer
- Implemented: OpenZWave, now possible to set Node configuration settings
- Fixed: Day string logging for the DT1 - RTGR328N device
- Implemented: Dashboard, clicking on a Motion/Dusk/Rain sensor icon will display the log
- Fixed: RFXtrx hardware can now also be compiled/used accross big-little endianess systems
- Implemented: Windows, Support for OpenHardwareMonitor supplied sensor data in Windows version of Domoticz. See wiki for info. If you see a hardware device "Internal sensors", please delete it. The correct one to use is "Motherboard".