@@ -110,6 +110,7 @@ images/air.png
 images/air48.png
 images/air_signal.png
 images/alarm48.png
+images/bbq.png
 images/background.png
 images/back_disabled.png
 images/back_enabled.png
